<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto" tools:context=".MainActivity"
            android:layout_width="match_parent"
            app:layout_dodgeInsetEdges="all"
            android:layout_height="match_parent"
    >

        <EditText
                android:hint="@string/search_city"
                android:inputType="textPostalAddress"
                android:autofillHints="postalAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/search_city"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp" android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toStartOf="@+id/btn_search"
                android:minHeight="55dp"/>
        <Button
                android:layout_width="55dp"
                android:gravity="center"
                app:iconGravity="textStart"
                android:layout_height="55dp" android:id="@+id/btn_search"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toEndOf="@id/search_city" android:layout_marginEnd="16dp"
                app:icon="@android:drawable/ic_search_category_default"
                style="@style/Widget.Material3.Button.IconButton.Filled" android:contentDescription="@string/search"/>
        <TextView
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tv_city_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_city"
                android:layout_marginTop="16dp" android:layout_marginStart="17dp"/>
        <ProgressBar android:layout_width="73dp" android:layout_height="69dp"
                     app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                     android:indeterminate="true"
                     app:layout_constraintTop_toBottomOf="@+id/search_city"
                     android:id="@+id/pb_icon" app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintVertical_bias="0.17000002"/>
        <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp" app:srcCompat="@android:drawable/divider_horizontal_dark"
                android:id="@+id/iv_weather_icon"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/weather_icon"
                app:layout_constraintTop_toBottomOf="@+id/tv_city_name"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toTopOf="@id/card" android:layout_marginBottom="300dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tv_weather_condition"
                app:layout_constraintTop_toBottomOf="@+id/iv_weather_icon" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/TextAppearance.AppCompat.Light.SearchResult.Title" android:textSize="20sp"
                android:layout_marginTop="5dp"/>
        <TextView
                android:text="@string/celsius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tv_current_weather"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintTop_toBottomOf="@+id/tv_weather_condition"
                android:textSize="24sp" android:layout_marginTop="5dp"/>
        <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                app:cardCornerRadius="10dp"
                app:cardPreventCornerOverlap="true"
                app:cardBackgroundColor="#7E7D7D"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
        >
            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                               android:layout_height="wrap_content"
                                                               android:padding="10dp">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                          android:layout_marginStart="16dp"
                          android:layout_marginTop="14dp" android:id="@+id/tv_temp_min"
                          android:text="@string/min"
                          android:textColor="@color/white"
                          style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle" android:textSize="17sp"/>
                <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                          android:textColor="@color/white"
                          app:layout_constraintTop_toTopOf="parent"
                          android:layout_marginTop="14dp" android:id="@+id/tv_temp_max"
                          android:text="@string/max"
                          app:layout_constraintStart_toEndOf="@+id/tv_temp_min"
                          app:layout_constraintEnd_toStartOf="@+id/tv_humidity"
                          style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle" android:textSize="17sp"
                          android:textAlignment="center"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:textColor="@color/white"
                          app:layout_constraintTop_toTopOf="parent"
                          android:layout_marginTop="14dp" android:id="@+id/tv_humidity"
                          android:text="@string/humidity"
                          android:layout_marginEnd="16dp"
                          app:layout_constraintEnd_toEndOf="parent"
                          style="@style/TextAppearance.AppCompat.SearchResult.Subtitle" android:textSize="17sp"/>
                <TextView
                        android:text="@string/celsius"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/tv_min_value"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/tv_temp_min"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp"
                        style="@style/TextAppearance.Material3.TitleLarge" android:textSize="20sp"/>
                <TextView
                        android:text="@string/celsius"
                        android:textColor="@color/white"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:id="@+id/tv_max_value"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/tv_temp_max"
                        style="@style/TextAppearance.Material3.TitleLarge"
                        android:textSize="20sp" android:textAlignment="center"
                        app:layout_constraintStart_toEndOf="@+id/tv_temp_min"
                        app:layout_constraintEnd_toEndOf="@+id/tv_temp_max"/>
                <TextView
                        android:textColor="@color/white"
                        android:text="@string/percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/tv_humidity_value"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/tv_humidity"
                        style="@style/TextAppearance.Material3.TitleLarge"
                        android:textSize="20sp" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="16dp"/>
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                              app:layout_constraintTop_toBottomOf="@id/tv_max_value"
                              android:id="@+id/linear_layout_titles"
                              android:layout_marginTop="16dp" android:weightSum="2" android:orientation="horizontal"
                              app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                >

                    <TextView
                            android:text="@string/precipitation"
                            android:textSize="17sp"
                            android:textColor="@color/white"
                            style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_height="wrap_content" android:id="@+id/tv_rain"
                            android:textAlignment="center"
                    />
                    <TextView
                            android:textColor="@color/white"
                            android:text="@string/wind"
                            android:textSize="17sp"
                            android:layout_weight="1"
                            style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/tv_wind"
                            android:textAlignment="center"
                    />
                </LinearLayout>
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                              app:layout_constraintTop_toBottomOf="@+id/linear_layout_titles"
                              android:layout_marginTop="8dp" android:weightSum="2" android:orientation="horizontal"
                              app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                              app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="10dp">
                    <TextView
                            android:textColor="@color/white"
                            android:text="@string/mm_h"
                            android:textSize="20sp"
                            android:layout_weight="1"
                            style="@style/TextAppearance.Material3.TitleLarge"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/tv_rain_value"
                            android:textAlignment="center"/>
                    <TextView
                            android:textColor="@color/white"
                            android:text="@string/m_s"
                            android:textSize="20sp"
                            android:layout_weight="1"
                            style="@style/TextAppearance.Material3.TitleLarge"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/tv_wind_value"
                            android:textAlignment="center"
                    />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
